moving portfolio page to its own file

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
-                <li><a href="#portfolio">Portfolio</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li> <!-- Link to the portfolio page -->
                 <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
@@ -47,7 +47,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 Your Name</p>
+        <p>&copy; Devin Thomeczek 2023</p>
     </footer>
 </body>
 </html>
