making each link its own page

--- a/about.html
+++ b/about.html
@@ -1,10 +1,10 @@
-<!-- portfolio.html -->
+<!-- about.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>About</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -18,14 +18,7 @@
             </ul>
         </nav>
     </header>
-    <section id="portfolio">
-        <div class="portfolio-content">
-            <h2>Portfolio</h2>
-            <p>Highlight your best coding projects with descriptions, screenshots, and links to live demos.</p>
-            <!-- Add your portfolio content here -->
-        </div>
-    </section>
-    <!-- The rest of your portfolio content -->
+    <!-- Your "About" page content goes here -->
     <footer>
         <p>&copy; Devin Thomeczek 2023</p>
     </footer>
