--- a/index.html
+++ b/index.html
@@ -1,51 +1,24 @@
+<!-- index.html -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>A View of Devin Thomeczek, B.S. in Computer Science</title>
-    <link rel="stylesheet" href="styles.css"> <!-- You can link to an external CSS file or add inline styles -->
+    <title>Home</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
         <nav>
             <ul>
-                <li><a href="#about">About</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li> <!-- Link to the portfolio page -->
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
-
-    <section id="hero">
-        <div class="hero-content">
-            <h1>Welcome to Your Website</h1>
-            <p>Showcasing Your Coding Work</p>
-            <a href="#portfolio" class="btn">View Portfolio</a>
-        </div>
-    </section>
-
-    <section id="about">
-        <div class="about-content">
-            <h2>About Me</h2>
-            <p>Hiya! I'm Devin, a recent graduate from Missouri S&T with a bachelors in computer science! I have a passion for developing new and interesting ways to approach various situations with code, and I became passionate about coding as a result of video games. Currently, I am looking for a position in which to apply my skills and what I've learned to a software development team. As a side project, I am doing research on genetic algorithms and how I can apply them to developing AI to play through the original Super Mario Bros.</p>
-        </div>
-    </section>
-
-    <section id="portfolio">
-        <div class="portfolio-content">
-            <h2>Portfolio</h2>
-            <p>Highlight your best coding projects with descriptions, screenshots, and links to live demos.</p>
-        </div>
-    </section>
-
-    <section id="contact">
-        <div class="contact-content">
-            <h2>Contact Me</h2>
-            <p>devinthomeczek@gmail.com</p>
-        </div>
-    </section>
-
+    <!-- Your home page content goes here -->
     <footer>
         <p>&copy; Devin Thomeczek 2023</p>
     </footer>
