updating navigation buttons

--- a/index.html
+++ b/index.html
@@ -19,6 +19,13 @@
         </nav>
     </header>
     <!-- Your home page content goes here -->
+    <section id="home">
+        <div class="homepage">
+            <h2>Home Page</h2>
+            <p>Welcome to my website! It's constantly going to be in development, so new things/changes may occur fairly often!</p>
+            <!-- Add your portfolio content here -->
+        </div>
+    </section>
     <footer>
         <p>&copy; Devin Thomeczek 2023</p>
     </footer>
