altering the website footer

--- a/about.html
+++ b/about.html
@@ -19,6 +19,13 @@
         </nav>
     </header>
     <!-- Your "About" page content goes here -->
+    <section id="about">
+        <div class="about-info">
+            <h2>Who Is Devin Thomeczek?</h2>
+            <p>Welcome to my website! It's constantly going to be in development, so new things/changes may occur fairly often!</p>
+            <!-- Add your portfolio content here -->
+        </div>
+    </section>
     <footer>
         <p>&copy; Devin Thomeczek 2023</p>
     </footer>
