--- a/contact.html
+++ b/contact.html
@@ -19,6 +19,14 @@
         </nav>
     </header>
     <!-- Your "Contact" page content goes here -->
+    <section id="contact">
+        <div class="contact-info">
+            <h2>Contact Information</h2>
+            <p>Email: devinthomeczek@gmail.com</p>
+            <p>Phone: +1 (618) 803-0771</p>
+            <!-- Add your portfolio content here -->
+        </div>
+    </section>
     <footer>
         <p>&copy; Devin Thomeczek 2023</p>
     </footer>
