--- a/portfolio.html
+++ b/portfolio.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <header>
+        <div class="mobile-menu">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
