editing mobile compatibility again

--- a/about.html
+++ b/about.html
@@ -27,8 +27,7 @@
     <section id="about">
         <div class="about-info">
             <h2>Who Is Devin Thomeczek?</h2>
-            <p>Welcome to my website! It's constantly going to be in development, so new things/changes may occur fairly often!</p>
-            <!-- Add your portfolio content here -->
+            <p>Hiya! I'm Devin, a recent graduate from Missouri S&T with a bachelors in computer science! I have a passion for developing new and interesting ways to approach various situations with code, and I became passionate about coding as a result of video games. Currently, I am looking for a position in which to apply my skills and what I've learned to a software development team. As a side project, I am doing research on genetic algorithms and how I can apply them to developing AI to play through the original Super Mario Bros.</p>
         </div>
     </section>
     <footer>
