--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="bar"></div>
             <div class="bar"></div>
         </div>
-        <nav>
+        <nav class="desktop-nav"> <!-- Desktop navigation menu -->
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -28,11 +28,13 @@
         <div class="homepage">
             <h2>Home Page</h2>
             <p>Welcome to my website! It's constantly going to be in development, so new things/changes may occur fairly often!</p>
-            <!-- Add your portfolio content here -->
         </div>
     </section>
     <footer>
         <p>&copy; Devin Thomeczek 2023</p>
     </footer>
+
+    <!-- JavaScript to toggle the mobile menu -->
+    <script src="script.js"></script>
 </body>
 </html>
