--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
             <div class="bar"></div>
             <div class="bar"></div>
         </div>
-        <nav>
+        <nav class="desktop-nav"> <!-- Desktop navigation menu -->
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
@@ -34,5 +34,8 @@
     <footer>
         <p>&copy; Devin Thomeczek 2023</p>
     </footer>
+
+    <!-- JavaScript to toggle the mobile menu -->
+    <script src="script.js"></script>
 </body>
 </html>
