--- a/about.html
+++ b/about.html
@@ -35,6 +35,6 @@
     </footer>
 
     <!-- JavaScript to toggle the mobile menu -->
-    <script src="script.js"></script>
+    <script src="mobile.js"></script>
 </body>
 </html>
