--- a/portfolio.html
+++ b/portfolio.html
@@ -36,6 +36,6 @@
     </footer>
 
     <!-- JavaScript to toggle the mobile menu -->
-    <script src="script.js"></script>
+    <script src="mobile.js"></script>
 </body>
 </html>
